--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "cassert": "cpp",
-        "strstream": "cpp"
+        "strstream": "cpp",
+        "filesystem": "cpp",
+        "*.rh": "cpp"
     }
 }
